--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
   "name": "site-saas",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "generate:types": "payload generate:types",
+    "db:fresh": "payload migrate:fresh",
+    "db:seed": "bun run src/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@payloadcms/db-mongodb": "^3.60.0",
     "@payloadcms/next": "^3.60.0",
+    "@payloadcms/plugin-multi-tenant": "^3.60.0",
     "@payloadcms/richtext-lexical": "^3.60.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -54,6 +59,7 @@
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.7.2",
     "payload": "^3.60.0",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
