--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@trpc/client": "^11.6.0",
     "@trpc/server": "^11.6.0",
     "@trpc/tanstack-react-query": "^11.6.0",
+    "babel-plugin-react-compiler": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
@@ -65,14 +66,14 @@
     "graphql": "^16.8.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.546.0",
-    "next": "15.5.6",
+    "next": "16.0.0",
     "next-themes": "^0.4.6",
     "nuqs": "^2.7.2",
     "payload": "^3.60.0",
     "prism-react-renderer": "^2.3.1",
-    "react": "19.1.0",
+    "react": "19.2.0",
     "react-day-picker": "^9.11.1",
-    "react-dom": "19.1.0",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
@@ -87,13 +88,17 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "eslint": "^9",
-    "eslint-config-next": "15.5.6",
+    "eslint-config-next": "16.0.0",
     "sass": "^1.83.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2"
   }
 }
